[tool.poetry]
name = "naver-ad-search"
version = "0.1.0"
description = ""
authors = ["pjt3591oo <pjt3591oo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
